--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,12 @@
 {
-  "include": [
-      "./src"
-  ],
-  "compilerOptions": {
-    "outDir": "./lib",
-
-    /* Projects */
-    "incremental": true,
-
-    /* Language and Environment */
-    "target": "ESNext",
-    "jsx": "react",
-
-    /* Modules */
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "baseUrl": "./src",
-
-    /* JavaScript Support */
-    "allowJs": false,
-
-    /* Emit */
-    "declaration": true,
-    "declarationMap": true,
-    "removeComments": true,
-
-    /* Interop Constraints */
-    "isolatedModules": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-
-    /* Type Checking */
-    "strict": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "skipLibCheck": true
-  }
+    "include": ["./src"],
+    "compilerOptions": {
+        "target": "es2016",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "noEmit": true
+    }
 }
