--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "tassa",
     "version": "1.0.0",
     "description": "Node in-memory datastore that runs in a separate worker.",
-    "main": "dist/index.js",
+    "main": "lib/index.js",
     "scripts": {
         "test": "tsc && jest --coverage --verbose ./lib",
-        "build": "tsup src/index.ts --format cjs,esm --dts",
+        "build": "tsc",
         "prettier-check": "prettier --check .",
         "prettier-write": "prettier --write ."
     },
@@ -15,7 +15,6 @@
     "devDependencies": {
         "typescript": "^4.0.5",
         "@types/node": "^14.11.1",
-        "tsup": "^6.6.3",
         "prettier": "3.0.0"
     }
 }
