--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,33 +2,19 @@
   "include": ["./src"],
   "compilerOptions": {
     "outDir": "./lib",
-
-    /* Projects */
     "incremental": true,
-
-    /* Language and Environment */
     "target": "ES2020",
-
-    /* Modules */
     "module": "commonjs",
-    // "moduleResolution": "node",
-    "baseUrl": "./src",
-
-    /* JavaScript Support */
+    "baseUrl": ".",
     "allowJs": false,
-
-    /* Emit */
     "declaration": true,
     "declarationMap": true,
     "removeComments": true,
 
-    /* Interop Constraints */
     "isolatedModules": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-
-    /* Type Checking */
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
