--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "tasa",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Node in-memory datastore that runs in a separate worker.",
+  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist/esm/src",
+    "dist/cjs/src"
+  ],
   "scripts": {
-    "test": "pnpm clean && tsc && node --test ./lib/tests/*.test.js",
+    "test": "pnpm build && node --test ./dist/esm/tests/*.test.js ",
     "format:write": "biome format --write .",
     "format:check": "biome format .",
-    "clean": "rm -rf ./lib",
-    "build": "pnpm clean && tsc"
+    "clean": "rm -rf ./dist",
+    "build": "pnpm clean && pnpm build:esm",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
   },
   "keywords": [],
   "author": "",
