--- a/.editorconfig
+++ b/.editorconfig
@@ -8,9 +8,10 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 max_line_length = 100
 
-[*.{js, ts}]
+[*.{js,ts}]
 charset = utf-8
 indent_size = 4
+indent_style = tab
 max_line_length = 80
 
 [*.md]
