--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "0.1.0",
   "description": "Node in-memory datastore that runs in a separate worker.",
   "type": "module",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "module": "dist/src/index.js",
   "files": [
-    "dist/esm/src",
-    "dist/cjs/src"
+    "dist/src"
   ],
   "scripts": {
-    "test": "pnpm build && node --test ./dist/esm/tests/*.test.js ",
+    "test": "pnpm build && node --test ./dist/tests/*.test.js ",
     "format:write": "biome format --write .",
     "format:check": "biome format .",
     "clean": "rm -rf ./dist",
     "build": "pnpm clean && pnpm build:esm",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+    "build:esm": "tsc"
   },
   "keywords": [],
   "author": "",
