--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dist/src"
   ],
   "scripts": {
-    "test": "pnpm build && node --test ./dist/tests/*.test.js ",
+    "test": "pnpm build && pnpm build:test && node --test ./dist/tests/*.test.js ",
     "format:write": "biome format --write .",
     "format:check": "biome format .",
     "clean": "rm -rf ./dist",
-    "build": "pnpm clean && pnpm build:esm",
-    "build:esm": "tsc"
+    "build": "pnpm clean && pnpm build:main",
+    "build:main": "tsc",
+    "build:test": "tsc -p ./tsconfig.test.json"
   },
   "keywords": [],
   "author": "",
